Implemented engine plugin for loading HTML template directives, instead of storing them in application objects. A few other minor changes and fixes.