@@ -1,31 +1,36 @@
 package net.sf.jaspercode.engine;
 
 import java.io.File;
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Set;
 
 import net.sf.jaspercode.api.plugin.EnginePlugin;
+import net.sf.jaspercode.api.plugin.PluginContext;
 import net.sf.jaspercode.engine.application.ApplicationManager;
+import net.sf.jaspercode.engine.processing.ProcessorLog;
 
 public class JasperAgent {
 	private File[] libs = null;
 	private String homeDir = null;
 	private boolean done = false;
 	Map<String,EnginePlugin> enginePlugins = new HashMap<>();
-	//private ProcessorLog engineLogger = null;
+	private ProcessorLog engineLogger = null;
 	private EngineProperties engineProperties = null;
 	private HashMap<String,ApplicationManager> apps = new HashMap<>();
 
 	private EnginePatterns patterns = null;
 	private EngineLanguages languages = null;
 	private PluginManager pluginManager = null;
+	private JasperResources jasperResources = null;
 	
 	public JasperAgent(File[] libFiles,HashMap<String,String> userOptions) {
 		String homeDir = userOptions.get("home.dir");
 		libs = libFiles;
 		this.homeDir = homeDir;
 		this.engineProperties = new EngineProperties(userOptions);
-		//this.engineLogger = new ProcessorLog("SYSTEM");
+		this.engineLogger = new ProcessorLog("ENGINE");
 	}
 
 	public void start() throws EngineInitException {
@@ -36,13 +41,12 @@ public class JasperAgent {
 			
 		}
 		initializePluginManager(libs);
+		jasperResources = new JasperResources(engineLogger, engineProperties, pluginManager);
 		initializePatterns();
 		initializeLanguages();
-		/* TODO: Plugin management
 		if (!once) {
 			startEnginePlugins();
 		}
-		*/
 		while(!done) {
 			if (once) done = true;
 			scanApplications();
@@ -57,15 +61,14 @@ public class JasperAgent {
 
 	}
 	
-	/*
 	protected void startEnginePlugins() throws EngineInitException {
 		// When we start the engine, enable all engine plugins
-		this.engineLogger.info("Scanning for engine plugins");
+		jasperResources.getEngineLogger().debug("Scanning for engine plugins");
 		Set<Class<EnginePlugin>> pluginClasses = pluginManager.getEnginePlugins();
 		for(Class<EnginePlugin> pluginClass : pluginClasses) {
 			String className = pluginClass.getCanonicalName();
 			try {
-				EnginePlugin plugin = pluginClass.newInstance();
+				EnginePlugin plugin = pluginClass.getConstructor().newInstance();
 				String name = plugin.getPluginName();
 				if ((name==null) || (name.trim().length()==0)) {
 					throw new EngineInitException("Found plugin '"+className+"' with no name");
@@ -76,21 +79,20 @@ public class JasperAgent {
 				String prop = "enginePlugin."+plugin.getPluginName() + ".enabled";
 				boolean enabled = this.engineProperties.getBoolean(prop, false);
 				if (enabled) {
-					PluginContext ctx = new PluginContextImpl(this.engineLogger, engineProperties);
+					PluginContext ctx = new PluginContextImpl(jasperResources, engineProperties);
 					plugin.setPluginContext(ctx);
 					plugin.engineStart();
 					enginePlugins.put(name, plugin);
 				} else {
-					engineLogger.info("Found plugin '"+plugin.getPluginName()+"' of class class '"+className+"' but it is not enabled");
+					engineLogger.info("Found plugin '"+plugin.getPluginName()+"' of class class '"+className+"' but it is not enabled - Set engine property '"+prop+"' to true to enable it.");
 				}
-			} catch(IllegalAccessException | InstantiationException e) {
+			} catch(IllegalAccessException | InstantiationException | InvocationTargetException | NoSuchMethodException e) {
 				throw new EngineInitException("Couldn't initialize engine plugin class "+className, e);
 			}
 		}
 		this.engineLogger.info("Engine plugin scan complete");
 		this.engineLogger.outputToSystem();
 	}
-	*/
 	
 	protected void scanSingleApp() throws EngineInitException {
 		if (apps.size()==0) {
@@ -102,7 +104,7 @@ public class JasperAgent {
 			
 			File outputDirFile = new File(outputDir);
 			
-			proc = new ApplicationManager(name,appDirFile,outputDirFile,engineProperties,patterns,languages,pluginManager/*, engineLogger*/);
+			proc = new ApplicationManager(name,appDirFile,outputDirFile,engineProperties,patterns,languages,pluginManager, jasperResources);
 			apps.put(name, proc);
 		}
 		
